# pattern_recognition

./: .gitignore  CMakeLists.txt  MarkovChain.cpp  MarkovChain.h  PatternRecognizer.cpp  PatternRecognizer.h  README.md  SequenceGenerator.cpp  SequenceGenerator.h  main.cpp
